chore: a bit more structure

--- a/constants.env
+++ b/constants.env
@@ -1,9 +1,10 @@
-JIMM_DNS_NAME="test-jaas.localhost"
+JIMM_DNS_NAME="test-jimm.localhost"
 
-MULTIPASS_VM_NAME="jimm-deploy-2"
-MULTIPASS_VM_CPUS="4"
-MULTIPASS_VM_MEMORY="8G"
-MULTIPASS_VM_DISK="50G"
-MULTIPASS_VM_LB_IP_RANGE="10.64.141.43-10.64.141.100"
+VM_NAME="jimm-deploy"
+VM_HOME="/home/ubuntu"
+VM_CPUS="4"
+VM_MEMORY="8G"
+VM_DISK="50G"
+VM_LB_IP_RANGE="10.64.141.43-10.64.141.100"
 
 WAIT_TIMEOUT="10m0s"
